--- a/src/main/resources/templates/addround.html
+++ b/src/main/resources/templates/addround.html
@@ -69,9 +69,41 @@
         <input type="text" name="nameofcourse"><br>
     </div>
     <div>
+        <h4>City</h4>
+        <input type="text" name="city"><br>
+    </div>
+    <div>
+        <h4>Date and Weather</h4>
+        <input type="text" name="dateandweather"><br>
+    </div>
+    <div>
         <h4>Score</h4>
         <input type="text" name="score"><br>
     </div>
+    <div>
+        <h4>Cost</h4>
+        <input type="text" name="cost"><br>
+    </div>
+    <div>
+        <h4>Playing Partners</h4>
+        <input type="text" name="playingpartners"><br>
+    </div>
+    <div>
+        <h4>Pars</h4>
+        <input type="text" name="pars"><br>
+    </div>
+    <div>
+        <h4>Birdies</h4>
+        <input type="text" name="birdies"><br>
+    </div>
+    <div>
+        <h4>Eagles or Better</h4>
+        <input type="text" name="eaglesorbetter"><br>
+    </div>
+    <div>
+        <input type="submit" name="submit">
+    </div>
+
 </form>
 
 </body>
